--- a/clustering/Clustering_codes.ipynb
+++ b/clustering/Clustering_codes.ipynb
@@ -1,42 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 2437,
-     "status": "ok",
-     "timestamp": 1709993241467,
-     "user": {
-      "displayName": "阮亮學",
-      "userId": "07025411125475831748"
-     },
-     "user_tz": -480
-    },
-    "id": "iGyrQxGsN6-d",
-    "outputId": "d1d6e532-1a26-46b8-bf8c-d10991d6d1e6"
+    "id": "BOW05daI7Cy3"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-     ]
-    }
-   ],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
+    "UCI Machine Learning Repository是一個知名的公開數據庫，旨在為機器學習社區提供大量的數據集，以便於進行學術研究和教育。該庫由加利福尼亞大學爾灣分校（University of California, Irvine）的機器學習和智慧系統實驗室維護，自1987年以來一直是機器學習和數據探勘領域研究人員的重要資源。\n",
+    "\n",
+    "UCI Machine Learning Repository提供各種類型的數據集，這些數據集覆蓋從財經、醫療、文本、影像到生物信息學等多個領域。這些數據集通常用於支持機器學習模型的開發和測試，包括但不限於分類、回歸、聚類以及其他數據探勘任務。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### wine dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -64,24 +48,12 @@
     }
    ],
    "source": [
-    "!pip install ucimlrepo\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "BOW05daI7Cy3"
-   },
-   "source": [
-    "UCI Machine Learning Repository是一個知名的公開數據庫，旨在為機器學習社區提供大量的數據集，以便於進行學術研究和教育。該庫由加利福尼亞大學爾灣分校（University of California, Irvine）的機器學習和智慧系統實驗室維護，自1987年以來一直是機器學習和數據探勘領域研究人員的重要資源。\n",
-    "\n",
-    "UCI Machine Learning Repository提供各種類型的數據集，這些數據集覆蓋從財經、醫療、文本、影像到生物信息學等多個領域。這些數據集通常用於支持機器學習模型的開發和測試，包括但不限於分類、回歸、聚類以及其他數據探勘任務。"
+    "!pip install ucimlrepo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -212,8 +184,14 @@
     "\n",
     "#print(X_1)\n",
     "\n",
-    "print(y)\n",
-    "\n"
+    "print(y)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### add label"
    ]
   },
   {
@@ -270,51 +248,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 9693,
-     "status": "ok",
-     "timestamp": 1709993264786,
-     "user": {
-      "displayName": "阮亮學",
-      "userId": "07025411125475831748"
-     },
-     "user_tz": -480
-    },
-    "id": "hnV8thkcYG-9",
-    "outputId": "d89b1c03-40c1-4a13-e01e-c5d6539a013c"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: matplotlib in /usr/local/lib/python3.10/dist-packages (3.7.1)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (1.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (4.49.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (1.4.5)\n",
-      "Requirement already satisfied: numpy>=1.20 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (1.25.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (23.2)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (9.4.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (3.1.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "!pip install matplotlib"
+    "### hierarchical clustering dendrogram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "MykCtyQe4JxF"
+   },
+   "source": [
+    "在 AgglomerativeClustering 中，linkage 參數用於指定計算群集之間距離的方法。linkage 參數有幾種選擇，包括：\n",
+    "\n",
+    "1. ward: 使用ward方差最小化算法。它是一種合併樹算法，尋找合併兩個群集的方式是將它們的方差增加的平方和最小化。這是默認值，通常適用於大多數情況。\n",
+    "\n",
+    "2. complete: 使用最大距離作為合併標準。即尋找兩個群集中最遠兩個點之間的距離，然後將這個距離作為兩個群集之間的距離。\n",
+    "\n",
+    "3. average: 使用平均距離作為合併標準。對於兩個群集，它計算所有點對之間的平均距離，然後將其視為兩個群集之間的距離。\n",
+    "\n",
+    "4. single: 使用最小距離作為合併標準。即尋找兩個群集中最近兩個點之間的距離，然後將這個距離作為兩個群集之間的距離。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from sklearn.datasets import make_blobs\n",
+    "from sklearn.cluster import AgglomerativeClustering\n",
+    "from scipy.cluster.hierarchy import dendrogram, linkage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -367,19 +339,11 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from sklearn.datasets import make_blobs\n",
-    "from sklearn.cluster import AgglomerativeClustering\n",
-    "from scipy.cluster.hierarchy import dendrogram, linkage\n",
-    "\n",
     "# Hierarchical Clustering\n",
     "hierarchical_cluster = AgglomerativeClustering(n_clusters=3, linkage='ward')\n",
     "hierarchical_cluster.fit(X)\n",
     "hierarchical_labels = hierarchical_cluster.labels_\n",
-    "\n",
     "print(hierarchical_labels)\n",
-    "\n",
     "\n",
     "# Plotting\n",
     "plt.figure(figsize=(12, 6))\n",
@@ -413,19 +377,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MykCtyQe4JxF"
-   },
+   "metadata": {},
    "source": [
-    "在 AgglomerativeClustering 中，linkage 參數用於指定計算群集之間距離的方法。linkage 參數有幾種選擇，包括：\n",
-    "\n",
-    "1. ward: 使用ward方差最小化算法。它是一種合併樹算法，尋找合併兩個群集的方式是將它們的方差增加的平方和最小化。這是默認值，通常適用於大多數情況。\n",
-    "\n",
-    "2. complete: 使用最大距離作為合併標準。即尋找兩個群集中最遠兩個點之間的距離，然後將這個距離作為兩個群集之間的距離。\n",
-    "\n",
-    "3. average: 使用平均距離作為合併標準。對於兩個群集，它計算所有點對之間的平均距離，然後將其視為兩個群集之間的距離。\n",
-    "\n",
-    "4. single: 使用最小距離作為合併標準。即尋找兩個群集中最近兩個點之間的距離，然後將這個距離作為兩個群集之間的距離。"
+    "### cluster knn scatter"
    ]
   },
   {
@@ -597,6 +551,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### choose best k"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "9CRoHoB87AgI"
    },
@@ -734,8 +695,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Elbow Method：隨著 k 值的增加，聚類的效果（比如集群內平方和）通常會迅速下降，直到某一\n",
+    "個 k 值後下降的速率急劇減緩，形成類似彎肘的形狀。該「彎肘點」所對應的 k 值就是最佳的聚\n",
+    "類數量，在這邊則是 3 的位置，所以當 k=3 時分類會分得最好\n",
+    "Average Silhouette Method：通過計算不同 k 值下的平均輪廓系數，來幫助選擇最佳的聚類數\n",
+    "量。通常情況下，平均輪廓系數越接近 1，表示聚類效果越好，在這邊則是 3 的位置，所以當 k=3\n",
+    "時分類會分得最好"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### scikit fuzzy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "47hADNM58nrN"
+   },
+   "source": [
+    "Fuzzy C-Means（FCM）是一種軟聚類（soft clustering）方法，類似於 k-Means 算法，但允許資料點同時屬於多個群集，而不是僅屬於一個。它在概念上類似於高斯混合模型（Gaussian Mixture Models，GMM），但是更簡單和易於理解。\n",
+    "\n",
+    "FCM 的主要思想是將每個資料點與每個群集中心的相似度表示為一個介於 0 和 1 之間的概率值。這些概率值通常被解釋為資料點屬於每個群集的程度，稱為隸屬度（membership degree）。FCM 的目標是最小化所有資料點的隸屬度加權的平方誤差（weighted squared error）。\n",
+    "\n",
+    "以下是 FCM 算法的基本步驟：\n",
+    "\n",
+    "1. 初始化: 隨機初始化每個資料點與每個群集中心的隸屬度。通常隨機初始化每個資料點對每個群集的隸屬度，使得每個資料點的隸屬度總和為 1。\n",
+    "\n",
+    "2. 更新群集中心: 根據當前的隸屬度，更新每個群集的中心位置。\n",
+    "\n",
+    "3. 更新隸屬度: 根據當前的群集中心，更新每個資料點對每個群集的隸屬度。\n",
+    "\n",
+    "4. 收斂檢測: 重複步驟 2 和步驟 3，直到隸屬度和群集中心不再改變，或達到最大迭代次數。\n",
+    "\n",
+    "5. 結果: 最後的隸屬度即為資料點屬於每個群集的程度，可以根據這些隸屬度來解釋聚類結果。\n",
+    "\n",
+    "FCM 算法相對於 k-Means 和 GMM 更具有彈性，因為它可以處理更多的不確定性，並且允許資料點同時屬於多個群集。然而，它也需要更多的計算成本和更多的超參數調整。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -776,12 +781,16 @@
     }
    ],
    "source": [
-    "pip install scikit-fuzzy"
+    "pip install scikit-fuzzy\n",
+    "import numpy as np\n",
+    "import skfuzzy as fuzz\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import Normalize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -874,9 +883,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import skfuzzy as fuzz\n",
-    "\n",
     "# 定義 FCM 模型參數\n",
     "n_clusters = 3\n",
     "\n",
@@ -894,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -936,8 +942,7 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.colors import Normalize\n",
+    "\n",
     "\n",
     "# 繪製資料點\n",
     "plt.figure(figsize=(3, 3))\n",
@@ -960,27 +965,34 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SOM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
-    "id": "47hADNM58nrN"
+    "id": "gL8VJ2O09TVo"
    },
    "source": [
-    "Fuzzy C-Means（FCM）是一種軟聚類（soft clustering）方法，類似於 k-Means 算法，但允許資料點同時屬於多個群集，而不是僅屬於一個。它在概念上類似於高斯混合模型（Gaussian Mixture Models，GMM），但是更簡單和易於理解。\n",
+    "自組織映射（Self-Organizing Maps，SOM），也稱為 Kohonen 網絡，是一種用於將高維資料映射到低維空間的無監督學習神經網絡算法。它通常用於對高維資料進行聚類、可視化和特徵提取。\n",
     "\n",
-    "FCM 的主要思想是將每個資料點與每個群集中心的相似度表示為一個介於 0 和 1 之間的概率值。這些概率值通常被解釋為資料點屬於每個群集的程度，稱為隸屬度（membership degree）。FCM 的目標是最小化所有資料點的隸屬度加權的平方誤差（weighted squared error）。\n",
+    "SOM 的主要特點是在學習過程中，通過競爭機制，將資料點映射到網絡中的節點，同時保持資料間的拓撲關係。換句話說，相鄰的資料點在原始空間中也會在 SOM 中被映射到相鄰的節點。這使得 SOM 不僅可以用於聚類，還可以用於可視化資料分佈，並發現資料的潛在結構。\n",
     "\n",
-    "以下是 FCM 算法的基本步驟：\n",
+    "以下是 SOM 的基本思想和步驟：\n",
     "\n",
-    "1. 初始化: 隨機初始化每個資料點與每個群集中心的隸屬度。通常隨機初始化每個資料點對每個群集的隸屬度，使得每個資料點的隸屬度總和為 1。\n",
+    "1. 初始化權重向量: 將每個節點的權重向量初始化為隨機值或者從資料中隨機選取。\n",
     "\n",
-    "2. 更新群集中心: 根據當前的隸屬度，更新每個群集的中心位置。\n",
+    "2. 選擇資料: 從資料集中隨機選取一個資料點。\n",
     "\n",
-    "3. 更新隸屬度: 根據當前的群集中心，更新每個資料點對每個群集的隸屬度。\n",
+    "3. 計算最相似的節點: 計算每個節點的權重向量與選定的資料點之間的距離，通常使用歐氏距離或者其他相似度度量。\n",
+    "4. 更新最相似的節點: 將最相似的節點（即與資料點距離最近的節點）及其鄰近節點的權重向量向資料點的方向調整，以使其更接近資料點。\n",
+    "5. 收斂檢測: 重複步驟 2 和步驟 4，直到網絡收斂或達到最大迭代次數。\n",
     "\n",
-    "4. 收斂檢測: 重複步驟 2 和步驟 3，直到隸屬度和群集中心不再改變，或達到最大迭代次數。\n",
+    "6. 結果: 最後的權重向量即為映射後的結果，可以用於聚類、可視化或特徵提取。\n",
     "\n",
-    "5. 結果: 最後的隸屬度即為資料點屬於每個群集的程度，可以根據這些隸屬度來解釋聚類結果。\n",
-    "\n",
-    "FCM 算法相對於 k-Means 和 GMM 更具有彈性，因為它可以處理更多的不確定性，並且允許資料點同時屬於多個群集。然而，它也需要更多的計算成本和更多的超參數調整。"
+    "SOM 算法的一個重要特點是它可以通過適當的參數設置和學習過程來保持資料間的拓撲關係，這使得它在許多應用中都表現出色，特別是在聚類和可視化方面。"
    ]
   },
   {
@@ -1022,12 +1034,17 @@
     }
    ],
    "source": [
-    "!pip install minisom"
+    "!pip install minisom\n",
+    "from minisom import MiniSom\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.datasets import load_wine\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1059,12 +1076,6 @@
     }
    ],
    "source": [
-    "from minisom import MiniSom\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.datasets import load_wine\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
     "# Load the wine dataset\n",
     "wine = load_wine()\n",
     "data = wine.data\n",
@@ -1106,27 +1117,32 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Biclustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
-    "id": "gL8VJ2O09TVo"
+    "id": "SK3LcZFC_83h"
    },
    "source": [
-    "自組織映射（Self-Organizing Maps，SOM），也稱為 Kohonen 網絡，是一種用於將高維資料映射到低維空間的無監督學習神經網絡算法。它通常用於對高維資料進行聚類、可視化和特徵提取。\n",
+    "雙聚類（BiClustering），也被稱為共聚類（Coclustering）或者矩陣分解（Matrix Factorization），是一種用於同時對行和列進行聚類的無監督學習方法。它的目標是同時識別資料集中的行聚類和列聚類，從而找到資料集的子集，其中行和列具有類似的特徵。\n",
     "\n",
-    "SOM 的主要特點是在學習過程中，通過競爭機制，將資料點映射到網絡中的節點，同時保持資料間的拓撲關係。換句話說，相鄰的資料點在原始空間中也會在 SOM 中被映射到相鄰的節點。這使得 SOM 不僅可以用於聚類，還可以用於可視化資料分佈，並發現資料的潛在結構。\n",
+    "下面是雙聚類的基本思想和步驟：\n",
     "\n",
-    "以下是 SOM 的基本思想和步驟：\n",
+    "1. 初始化: 隨機初始化行和列的聚類。\n",
     "\n",
-    "1. 初始化權重向量: 將每個節點的權重向量初始化為隨機值或者從資料中隨機選取。\n",
+    "2. 計算相似性: 通過計算行和列之間的相似性（例如，歐氏距離、皮爾遜相關系數等），得到一個相似性矩陣。\n",
     "\n",
-    "2. 選擇資料: 從資料集中隨機選取一個資料點。\n",
+    "3. 優化聚類: 通過最大化行和列的相似性，同時最小化聚類內的變異性和聚類間的差異性，來優化聚類。這可以通過迭代地更新聚類來實現。\n",
     "\n",
-    "3. 計算最相似的節點: 計算每個節點的權重向量與選定的資料點之間的距離，通常使用歐氏距離或者其他相似度度量。\n",
-    "4. 更新最相似的節點: 將最相似的節點（即與資料點距離最近的節點）及其鄰近節點的權重向量向資料點的方向調整，以使其更接近資料點。\n",
-    "5. 收斂檢測: 重複步驟 2 和步驟 4，直到網絡收斂或達到最大迭代次數。\n",
+    "4. 收斂檢測: 重複步驟 2 和步驟 3，直到收斂條件滿足（例如，聚類不再改變或達到最大迭代次數）。\n",
     "\n",
-    "6. 結果: 最後的權重向量即為映射後的結果，可以用於聚類、可視化或特徵提取。\n",
+    "5. 結果: 最後得到的行和列聚類即為雙聚類的結果，可以用於進一步的分析和應用。\n",
     "\n",
-    "SOM 算法的一個重要特點是它可以通過適當的參數設置和學習過程來保持資料間的拓撲關係，這使得它在許多應用中都表現出色，特別是在聚類和可視化方面。"
+    "雙聚類算法的選擇取決於資料的特性、結構和需求。常見的雙聚類算法包括基於模型的方法（如Spectral Co-clustering）和基於非負矩陣分解的方法（如Singular Value Decomposition）。每種方法都有其優缺點，需要根據具體的應用場景來選擇。"
    ]
   },
   {
@@ -1233,25 +1249,30 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MSR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
-    "id": "SK3LcZFC_83h"
+    "id": "KX_UjVuACWvC"
    },
    "source": [
-    "雙聚類（BiClustering），也被稱為共聚類（Coclustering）或者矩陣分解（Matrix Factorization），是一種用於同時對行和列進行聚類的無監督學習方法。它的目標是同時識別資料集中的行聚類和列聚類，從而找到資料集的子集，其中行和列具有類似的特徵。\n",
+    "mean squared residue score (H) 是一種用於衡量聚類質量的指標，通常用於評估叢聚分析的性能。在聚類的上下文中，殘差（residue）指的是每個資料點到其所屬聚類中心的距離的平方，mean squared residue score (H) 則是所有資料點殘差的平均值。\n",
     "\n",
-    "下面是雙聚類的基本思想和步驟：\n",
+    "H 的計算方式如下：\n",
     "\n",
-    "1. 初始化: 隨機初始化行和列的聚類。\n",
+    "1. 首先，對於每個資料點，計算其到所屬聚類中心的距離的平方（即殘差）。\n",
     "\n",
-    "2. 計算相似性: 通過計算行和列之間的相似性（例如，歐氏距離、皮爾遜相關系數等），得到一個相似性矩陣。\n",
+    "2. 然後，將所有資料點的殘差加總起來。\n",
     "\n",
-    "3. 優化聚類: 通過最大化行和列的相似性，同時最小化聚類內的變異性和聚類間的差異性，來優化聚類。這可以通過迭代地更新聚類來實現。\n",
+    "3. 最後，將總殘差除以資料點的總數，得到 mean squared residue score (H)。\n",
     "\n",
-    "4. 收斂檢測: 重複步驟 2 和步驟 3，直到收斂條件滿足（例如，聚類不再改變或達到最大迭代次數）。\n",
+    "H 的值越小，表示資料點與其所屬聚類中心之間的距離越小，即聚類質量越好。因此，H 越小通常意味著聚類結果越好。\n",
     "\n",
-    "5. 結果: 最後得到的行和列聚類即為雙聚類的結果，可以用於進一步的分析和應用。\n",
-    "\n",
-    "雙聚類算法的選擇取決於資料的特性、結構和需求。常見的雙聚類算法包括基於模型的方法（如Spectral Co-clustering）和基於非負矩陣分解的方法（如Singular Value Decomposition）。每種方法都有其優缺點，需要根據具體的應用場景來選擇。"
+    "mean squared residue score (H) 是聚類算法性能評估的一種常用指標之一，特別是在需要衡量聚類質量時。"
    ]
   },
   {
@@ -1306,23 +1327,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "KX_UjVuACWvC"
-   },
+   "metadata": {},
    "source": [
-    "mean squared residue score (H) 是一種用於衡量聚類質量的指標，通常用於評估叢聚分析的性能。在聚類的上下文中，殘差（residue）指的是每個資料點到其所屬聚類中心的距離的平方，mean squared residue score (H) 則是所有資料點殘差的平均值。\n",
-    "\n",
-    "H 的計算方式如下：\n",
-    "\n",
-    "1. 首先，對於每個資料點，計算其到所屬聚類中心的距離的平方（即殘差）。\n",
-    "\n",
-    "2. 然後，將所有資料點的殘差加總起來。\n",
-    "\n",
-    "3. 最後，將總殘差除以資料點的總數，得到 mean squared residue score (H)。\n",
-    "\n",
-    "H 的值越小，表示資料點與其所屬聚類中心之間的距離越小，即聚類質量越好。因此，H 越小通常意味著聚類結果越好。\n",
-    "\n",
-    "mean squared residue score (H) 是聚類算法性能評估的一種常用指標之一，特別是在需要衡量聚類質量時。"
+    "### 結論\n"
    ]
   }
  ],
